--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.1.0",
+    "axios": "^1.3.4",
+    "flowbite": "^1.6.3",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-uploader": "^1.2.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.1.4"
   }
 }
