--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "quill-image-uploader": "^1.2.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
