--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "flowbite": "^1.6.3",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-uploader": "^1.2.4",
+    "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-toastify": "^0.1.1",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
