--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueup/vue-quill": "^1.1.0",
     "axios": "^1.3.4",
     "flowbite": "^1.6.3",
+    "luxon": "^3.3.0",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-uploader": "^1.2.4",
     "vee-validate": "^4.7.4",
