Add Encrypt Plugin with crypto js

--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@vueup/vue-quill": "^1.1.0",
     "axios": "^1.3.4",
+    "crypto-js": "^4.1.1",
     "flowbite": "^1.6.3",
     "luxon": "^3.3.0",
     "quill-blot-formatter": "^1.0.5",
     "quill-image-uploader": "^1.2.4",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
+    "vue-cryptojs": "^2.3.1",
     "vue-router": "^4.1.6",
     "vue3-toastify": "^0.1.1",
     "vuex": "^4.0.2",
