--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@vueup/vue-quill": "^1.1.0",
     "axios": "^1.3.4",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.18.0",
+    "firebaseui": "^6.0.2",
     "flowbite": "^1.6.3",
     "luxon": "^3.3.0",
     "quill-blot-formatter": "^1.0.5",
