--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BASE_URL=localhost
 APP_PORT=3002
-VITE_CRYPTO_SECRET=jjLKkajskn@klajsdl
+VITE_CRYPTO_SECRET=
 VITE_AXIOS_BASE_URL=https://api.cloumus30.online
