--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.2.47",
     "vue-cryptojs": "^2.3.1",
     "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6",
     "vue3-toastify": "^0.1.1",
     "vuex": "^4.0.2",
     "yup": "^1.0.2"
