--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "flowbite": "^1.6.3",
     "luxon": "^3.3.0",
     "quill-blot-formatter": "^1.0.5",
-    "quill-image-uploader": "^1.2.4",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-uploader": "^1.3.0",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.47",
     "vue-cryptojs": "^2.3.1",
