Update add Docker

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 BASE_URL=localhost
 APP_PORT=3002
-VITE_CRYPTO_SECRET=
-VITE_AXIOS_BASE_URL=https://api.cloumus30.online
+VITE_CRYPTO_SECRET=jjLKkajskn@klajsdl
+VITE_AXIOS_BASE_URL=https://api-notes.cloudias.my.id
+# VITE_AXIOS_BASE_URL=http://localhost:3000
 VITE_AUTH_EXPIRED=86400
 VITE_APP_DOMAIN=notes.cloumus30.online
