--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     container_name: fe-note
-    image: be-note
+    image: fe-note
     restart: unless-stopped
     working_dir: /usr/src/app
     volumes: 
