--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,27 @@
 BASE_URL=localhost
 APP_PORT=3002
 VITE_CRYPTO_SECRET=jjLKkajskn@klajsdl
-VITE_AXIOS_BASE_URL=https://api-notes.cloudias.my.id
+VITE_AXIOS_BASE_URL=https://api-notes2.cloudias.my.id
 # VITE_AXIOS_BASE_URL=http://localhost:3000
 VITE_AUTH_EXPIRED=86400
 VITE_APP_DOMAIN=notes.cloumus30.online
+
+#APi BE Note
+server{
+        server_name api-notes2.cloudias.my.id;
+
+        location / {
+
+                proxy_pass http://localhost:3000/;
+                proxy_http_version  1.1;
+                proxy_cache_bypass  $http_upgrade;
+                proxy_set_header Upgrade           $http_upgrade;
+                proxy_set_header Connection        "upgrade";
+                proxy_set_header Host              $host;
+                proxy_set_header X-Real-IP         $remote_addr;
+                proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header X-Forwarded-Host  $host;
+                proxy_set_header X-Forwarded-Port  $server_port;
+        }
+}
