--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     container_name: fe-note
     image: fe-note
     restart: unless-stopped
-    working_dir: /user/src/app
+    working_dir: /usr/src/app
     volumes: 
-      - ./:/user/src/app
+      - ./:/usr/src/app
     networks:
-      - be-cloudy-notes_cloudy-notes
+      - fe-cloudy-notes
 
   fe-note-nginx:
     image: nginx:1.17-alpine
@@ -20,11 +20,11 @@ services:
     ports:
       - ${APP_PORT}:80
     volumes:
-      - ./:/user/src/app
+      - ./:/usr/src/app
       - ./docker-compose/nginx:/etc/nginx/conf.d
     networks:
-      - be-cloudy-notes_cloudy-notes
+      - fe-cloudy-notes
 
 networks:
-  be-cloudy-notes_cloudy-notes:
-    external: true
+  fe-cloudy-notes:
+    driver: bridge
