--- a/docker-compose/nginx/fe-note.conf
+++ b/docker-compose/nginx/fe-note.conf
@@ -5,7 +5,7 @@ server {
     access_log /var/log/nginx/access.log;
     server_name notes.cloudias.my.id;
 
-    root /user/src/app/dist;
+    root /usr/src/app/dist;
 
     # Add index.php to the list if you are using PHP
     index index.html index.htm index.nginx-debian.html;
